test/type-check/should-fail/not1.bril
main{

    v1: int = const 1;
    v2: bool = not v1;
    print v2;
}
